--- a/src/app/features/modals/remote-management/remote-config-modal/remote-config-modal.component.scss
+++ b/src/app/features/modals/remote-management/remote-config-modal/remote-config-modal.component.scss
@@ -1,7 +1,6 @@
 .modal-container {
   display: flex;
   flex-direction: column;
-  overflow: hidden;
   width: 100%;
   height: 100%;
   background: var(--app-background);
@@ -78,21 +77,17 @@
             opacity: 0.6;
           }
         }
-
-        &.clickable {
-          cursor: pointer;
-        }
       }
     }
   }
 
   // =============================================
-  // MODAL CONTENT - UPDATED
+  // MODAL CONTENT
   // =============================================
   .modal-content {
     position: relative;
     flex: 1;
-    overflow: hidden; // Changed from auto to hidden
+    overflow: hidden;
     display: flex;
     flex-direction: column;
 
@@ -100,10 +95,9 @@
       flex: 1;
       display: flex;
       flex-direction: column;
+      overflow: hidden;
 
-      // Ensure child components take full height
-      app-remote-config-step,
-      app-flag-config-step {
+      .step {
         flex: 1;
         display: flex;
         flex-direction: column;
