--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -115,20 +115,13 @@
             >
             </app-general-overview>
           }
-          @case ('files') {
-            <div class="under-construction-wrapper">
-              <div class="icon-container">
-                <mat-icon svgIcon="wrench" class="construction-icon"></mat-icon>
-              </div>
-              <h2>Under Construction</h2>
-              <p>
-                This feature is currently being built.<br />
-                Please check back soon!
-              </p>
-              <div class="construction-bar">
-                <div class="bar"></div>
-              </div>
-            </div>
+          @case ('serve') {
+            <app-serve-overview
+              [remotes]="remotes"
+              (remoteSelected)="selectRemote($event)"
+              (startServe)="onStartServe($event)"
+            >
+            </app-serve-overview>
           }
           @default {
             <app-app-overview
@@ -162,20 +155,20 @@
             >
             </app-general-detail>
           }
-          @case ('files') {
-            <div class="under-construction-wrapper">
-              <div class="icon-container">
-                <mat-icon svgIcon="wrench" class="construction-icon"></mat-icon>
-              </div>
-              <h2>Under Construction</h2>
-              <p>
-                This feature is currently being built.<br />
-                Please check back soon!
-              </p>
-              <div class="construction-bar">
-                <div class="bar"></div>
-              </div>
-            </div>
+          @case ('serve') {
+            <app-serve-detail
+              [selectedRemote]="selectedRemote"
+              [remoteSettings]="loadRemoteSettings(selectedRemote.remoteSpecs.name)"
+              (startServeClick)="onStartServe($event)"
+              (openRemoteConfigModal)="
+                openRemoteConfigModal(
+                  $event.editTarget,
+                  $event.existingConfig,
+                  $event.initialSection
+                )
+              "
+            >
+            </app-serve-detail>
           }
           @default {
             <app-app-detail
